Fix a few issues from cookbook generation.
It doesn't make sense to have a Vagrantfile. The rest is to fix platforms.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,8 +32,7 @@ Metrics/AbcSize:
 AllCops:
   Exclude:
     - 'Guardfile'
-    - 'test/**/*_test.rb'
-    - 'test/**/*_spec.rb'
+    - 'test/**/*_[test|spec].rb'
 
 Style/GuardClause:
   Enabled: false
