--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -11,6 +11,7 @@ platforms:
   - name: ubuntu-12.04
   - name: centos-7.1
   - name: centos-6.6
+  - name: centos-5.11
 
 suites:
   - name: default
