--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 ---
 language: ruby
-script: bin/rspec
+notifications:
+  slack: blpsi:eHp3Czg42iGzaTgG8sAFeD9v
+script:
+  - bin/rubocop
+  - bin/foodcritic .
+  - bin/rspec
 rvm:
   - 2.1
   - 2.2
@@ -10,5 +15,3 @@ branches:
 builder_args: --jobs 7
 matrix:
   fast_finish: true
-notifications:
-  slack: blpsi:eHp3Czg42iGzaTgG8sAFeD9v
