--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,7 @@
 language: ruby
 notifications:
   slack: bloomberg-rnd:eHp3Czg42iGzaTgG8sAFeD9v
-script:
-  - bin/rubocop
-  - bin/foodcritic .
-  - bin/rspec
+script: bundle exec rake travis
 rvm:
   - 2.1
   - 2.2
