--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 ---
 language: ruby
+sudo: false
 notifications:
   slack: bloomberg-rnd:eHp3Czg42iGzaTgG8sAFeD9v
 script: bundle exec rake travis
+cache: bundler
 rvm:
   - 2.1
   - 2.2
