Adds exclusion to Rubocop for vendors.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -45,8 +45,9 @@ AllCops:
     - 'Berksfile'
     - 'Rakefile'
     - 'Vagrantfile'
-    - 'test/**/*.rb'
+    - 'test/**/*'
     - 'bin/*'
+    - 'vendor/**/*'
 
 Style/GuardClause:
   Enabled: false
